# Echo

./: .gitignore  CMakeLists.txt  README.md
libraries/fmod-headers/: CMakeLists.txt
libraries/imgui-hook/: CMakeLists.txt
libraries/imgui-hook/imgui/: imstb_truetype.h
libraries/imguifiledialog/: ImGuiFileDialog.cpp  ImGuiFileDialog.h
libraries/imguifiledialog/stb/: stb_image.h
src/: imfilebrowser.h  includes.hpp  increment_version.py  main.cpp  version.h
src/Clickbot/: clickbot.cpp  clickbot.hpp
src/GUI/: Icons.h  gui.cpp  gui.hpp  keybindable.h  keybindablebase.h  keybinds.cpp  keybinds.h  keybinds.hpp
src/GUI/Fonts/: OpenSans-Medium.c  OpenSans-Medium.h
src/Hack/: audiopitchHack.cpp  audiopitchHack.hpp  hacks.h  hitboxnode.cpp  hitboxnode.hpp  opcode.hpp  trajectorysimulation.cpp  trajectorysimulation.hpp
src/Hooks/: hooks.cpp  hooks.hpp
src/Logic/: autoclicker.hpp  convertible.h  inputs.cpp  inputs.hpp  logic.cpp  logic.hpp  macros.cpp  macros.hpp  miniaudio.h  sound_system.cpp  sound_system.hpp  speedhack.cpp  speedhack.h
src/Logic/Conversions/: json.h  mhr.h  mhr_json.h  osu.h  plaintext.h  tasbot.h  zbotf.h
src/Recorder/: recorder.cpp  recorder.hpp
